 * ANY SPECIAL, DIRECT, INDIRECT, OR CONSEQUENTIAL DAMAGES OR ANY DAMAGES
 * WHATSOEVER RESULTING FROM LOSS OF USE, DATA OR PROFITS, WHETHER IN AN
 * ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 * OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 * 
 * $Id$
 */
 
TreeTank 4.17
-------------
10 Introduced Conventions for IReadTransaction and IFilter. Bug fixed with
   IReadTransaction.moveTo(key).
 9 Moved IConstants to utils package. It should no longer be used publicly.
   Use IReadTransaction.isNullNodeKey(key) and getNullNodeKey().
 8 Refactored IReadTransaction. Move operations return true if the new node
   could be selected. If not, the cursor stays with the former node and false
   is returned.
 7 Refactored IFilter, added AbstractFilter not to pass transaction with each
   call to filter().
 6 Introduced Conventions for IAxis. Generic test case added to test all axis
   implementations for convention compliance. Bug fixed with FullTextAxis.
 5 BeanUtil now supporting remove().
 4 Added readme.txt to provide authoritative coding conventions.
 3 Added reset() to IAxis to allow for NestedAxis.
 2 Switched to ISC License.
 1 Replaced all axis classes performing tests to generic FilterAxis combined
   with IFilter.
 0 Completely switched to unchecked exceptions.
 
TreeTank 4.16
-------------
 6 WriteTransaction now threadsafe by enforcing single-writer contract.
 5 Auto commit now default. User must no longer call commit. Auto commit
   commits after the modification of some nodes as well as before
   IWriteTransaction.close().
 4 Idempotent close operation. Multiple calls do no longer hurt.
 3 Added ID annotation for beans.
 2 BeanUtil now serializing fields as attributes.
 1 Added namespace and attribute getters to IReadTransaction.
 0 Support wildcard suffix in FullTextAxis. It is activated by * as last
   character in token.
 
TreeTank 4.15
-------------